--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,11 +1,9 @@
 ---
 title: Welcome to Starlight
 description: Get started building your docs site with Starlight.
-template: splash
+tableOfContents: false
 hero:
   tagline: Congrats on setting up a new Starlight project!
-  image:
-    file: ../../assets/houston.webp
   actions:
     - text: Example Guide
       link: /guides/example/
